force-app/main/default/objects/ssot__FinancialApplication__dlm/fields/ssot__AppIntakeChannelType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppIntakeChannelType__c</fullName>
    <label>App Intake Channel Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppIntakeChannelType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>