force-app/main/default/objects/ssot__FinancialApplication__dlm/fields/ssot__ThirdPartyLoanProviderAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ThirdPartyLoanProviderAccountId__c</fullName>
    <label>Third Party Loan Provider Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ThirdPartyLoanProviderAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>