force-app/main/default/objects/ssot__FinancialApplication__dlm/fields/ssot__TotalDebtToIncomePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDebtToIncomePercent__c</fullName>
    <label>Total Debt To Income Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDebtToIncomePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>