force-app/main/default/objects/ssot__FinancialApplication__dlm/fields/ssot__TotalExpenseToIncomeRatioNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalExpenseToIncomeRatioNumber__c</fullName>
    <label>Total Expense To Income Ratio</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalExpenseToIncomeRatioNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>