force-app/main/default/objects/ssot__FinancialApplication__dlm/fields/ssot__TotalLoanToValuePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalLoanToValuePercent__c</fullName>
    <label>Total Loan To Value Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalLoanToValuePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>